--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -23,7 +23,7 @@
         <label class="agree" for="I Agree">I Agree</label><br>
         </div>
         <div class="content">
-        <p>By clicking <button class="register_small">Register</button>, you agree to the <a href="#">Terms and Conditions</a> set out by this site, including our Cookie Use.</p>
+        <p>By clicking <button class="register_small">Register</button>, you agree to the <a href="#">Terms and Conditions</a> set <br>out by this site, including our Cookie Use.</p>
 </div>
         </div> 
        <div class="buttons"> <button class="register_big" type="button">Register</button>
